# demo-amazon-q-aws-summit-2024

./: .mise.toml  Dockerfile  README.md  Taskfile.yml  compose.mysql-57.yml  compose.mysql-80.yml  compose.yml  pyproject.toml  ruff.toml
app/: main.py
app/config/: db.py
app/models/: __init__.py  user.py
app/routers/: users.py
app/services/: users.py
